k8s/envoy-gateway-config.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: valheim-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
    - name: valheim-udp-2456
      protocol: UDP
      port: 2456
    - name: valheim-udp-2457
      protocol: UDP
      port: 2457
